# hand-gesture-recognition

./: README.md  hand_gesture_classification.ipynb  mlflow_utils.py  pyproject.toml
mlruns/1/e01d859ca45747cf8e07c60ad6e53d7e/artifacts/dataset/: tmpc4jm2ck4.csv
mlruns/1/models/m-173068b36ae74ef09b7fdae46a2b32c0/artifacts/: MLmodel
mlruns/1/models/m-1914ac92b6dd41728f811ec13a3dfe36/artifacts/: MLmodel
mlruns/1/models/m-34c92cd96fa74bf596d58274130b2ba2/artifacts/: MLmodel
mlruns/1/models/m-3f5f9534a8b6487f9044e2f6893c79ca/artifacts/: MLmodel
mlruns/1/models/m-5f6eeaa9163e416d9ce09dfb891a0edc/artifacts/: MLmodel  input_example.json  serving_input_example.json
mlruns/1/models/m-7912c425b74a464294f91df916764d35/artifacts/: MLmodel
mlruns/1/models/m-8fb7eb4885b842cd8a692f3396ce5fa5/artifacts/: MLmodel
mlruns/1/models/m-a32576d8089a423581a8c883c10f6891/artifacts/: MLmodel  model.pkl
mlruns/1/models/m-b3d068131b9e4007aa38f2b620455fee/artifacts/: MLmodel
mlruns/1/models/m-bad361faee6640d5a44082f3967e1e69/artifacts/: MLmodel  model.pkl
mlruns/1/models/m-f1fbee4f64534f068889f93f4b532580/artifacts/: MLmodel
mlruns/1/models/m-f82781499b124324ab9997a444068bef/artifacts/: MLmodel  conda.yaml  model.pkl
