[project]
name = "hand-gesture"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.2.0",
    "joblib>=1.5.3",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "mediapipe>=0.10.32",
    "mlflow>=2.20",
    "numpy>=2.4.2",
    "opencv-python>=4.13.0.92",
    "pandas<3",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
]
